# LocalAIChat

./: .gitignore  CHANGELOG.md  FILE_MANIFEST.md  LICENSE  QUICKSTART.md  README.md  USAGE_GUIDE.md  build.bat  build.sh  gradlew  settings.gradle.kts
.github/workflows/: README.md  build-release.yml  build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_interface.cpp  llama_wrapper.cpp  llama_wrapper.h  llm_engine.cpp  llm_engine.h  localai.cpp
app/src/main/java/com/localai/chat/: LocalAIApplication.kt  MainActivity.kt
app/src/main/java/com/localai/chat/data/: ChatMessage.kt  ChatRepository.kt  Message.kt  ModelManager.kt
app/src/main/java/com/localai/chat/engine/: GenerationParams.kt  LlmEngine.kt  ModelInfo.kt  ProgressCallback.kt  StreamCallback.kt
app/src/main/java/com/localai/chat/ui/: MainScreen.kt
app/src/main/java/com/localai/chat/ui/theme/: Theme.kt  Type.kt
app/src/main/java/com/localai/chat/utils/: PreferenceManager.kt
app/src/main/java/com/localai/chat/viewmodel/: ChatViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml
